service.yaml
apiVersion: v1
kind: Service

metadata:
  name: heat-demo-svc

spec:
  type: ClusterIP

  selector:
    app: heat-demo

  ports:

    - name: http

      port: 80

      targetPort: 8080
